--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Grams!</h1>
 
-<%= simple_form_for @gram do |f| %>
+<%= simple_form_for Comment.new, url: gram_comments_path(gram) do |f| %>
 	<%= f.input :message %>
 	<%= f.submit "Post!" %>
 <% end %>
